# Knowledge-Base

./: .env  .env.example  .gitignore  FINAL_README.md  PROJECT_TAKEOVER_AUDIT.md  README.md  README.mine.md  apply_inventory_mapper_followup.py  build_phase4_schema.py  build_phase6_7.py  compactiq_5_inventory_mockdata.json  compatibility_inventory_report.md  compliance_evaluation_validation.json  device_resolution_audit.md  integration_report.md  inventory_load_report.json  inventory_mapper_layer1_1.patch  inventory_mapper_layer1_1_followup.patch  inventory_mapper_layer1_1_followup_v2.patch  inventory_mapper_layer1_1_followup_v3.patch  inventory_mapping_report.json  inventory_validation_report.json  load_inventory_into_neo4j.py  load_report.json  mock_inventory(2).json  neo4j_connection_audit.md  neo4j_schema_alignment_report.md  phase9_review_summary.md  recommendation_engine_validation.json  relationship_report.json  relationship_validation_report.json  requirements.txt  root_cause_engine_validation.json  test_results.txt  unmatched_inventory.json  validation_report.json  verify_inventory_graph.py  violation_validation.json
Compact-IQ/: .env.example  .gitignore  EXTRA_FEATURES_README.md  PROJECT_INDEX.md  README.md  docker-compose.yml  pyproject.toml
Compact-IQ/app/: main.py
Compact-IQ/client/: README.md  index.html  package-lock.json  package.json
Compact-IQ/docs/: API_CONTRACTS.md  API_USAGE_MAP.md  ARCHITECTURE.md  CURRENT_APP_AUDIT.md  DATABASE_SCHEMA.md  DECISIONS.md  DEMO_PLAN.md  FRONTEND_ROUTE_MAP.md  GRAPH_MODEL.md  GUARDRAILS_API.md  GUARDRAILS_DESIGN.md  (+16 more)
(+627 files in other folders)
